Generate RSS feed for development snapshots

--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -20,6 +20,9 @@ project_downloads_url='http://wiki.arx-libertatis.org/Download'
 # URL for the full changelog (OPTIONAL)
 project_changelog_url='http://wiki.arx-libertatis.org/Changelog'
 
+# URL where output files can be accessed
+project_files_url='http://arx-libertatis.org/files/'
+
 # GPG key id to sign builds with - empty key disables signing
 sign_key='F87D7DF750859A5E' # release@arx-libertatis.org
 
