--- a/config
+++ b/config
@@ -194,6 +194,6 @@ launchpad_key='28555A66D7E1DEC9'
 ubuntu_versions+=(
 	'precise' # 12.04 LTS  EOL: Apr 2017
 	'trusty'  # 14.04 LTS  EOL: Apr 2019
-	'utopic'  # 14.10      EOL: Jul 2015
 	'vivid'   # 15.04      EOL: Jan 2016
+	'wily'    # 15.10
 )
