Define more Windows system libraries

--- a/scripts/config
+++ b/scripts/config
@@ -234,6 +234,9 @@ system_libraries=(
 	'advapi32.dll'
 	'comctl32.dll'
 	'comdlg32.dll'
+	'crypt32.dll'
+	'dbghelp.dll'
+	'dnsapi.dll'
 	'gdi32.dll'
 	'imm32.dll'
 	'kernel32.dll'
@@ -241,12 +244,16 @@ system_libraries=(
 	'ole32.dll'
 	'oleaut32.dll'
 	'opengl32.dll'
+	'psapi.dll'
 	'shell32.dll'
 	'user32.dll'
 	'uuid.dll'
 	'version.dll'
+	'winhttp.dll'
+	'wininet.dll'
 	'winmm.dll'
 	'winspool.dll'
+	'ws2_32.dll'
 	
 	# FreeBSD
 	'libthr.so*'
@@ -397,9 +404,13 @@ declare -A licenses=(
 	['/usr/lib/libGL.so*']=''
 	['/usr/lib/libX11.so*']=''
 	# Windows
+	['*/Program Files/Windows Kits/*']=''
 	['advapi32.lib']=''
 	['comctl32.lib']=''
 	['comdlg32.lib']=''
+	['crypt32.lib']=''
+	['dbghelp.lib']=''
+	['dnsapi.lib']=''
 	['gdi32.lib']=''
 	['imm32.lib']=''
 	['kernel32.lib']=''
@@ -407,12 +418,16 @@ declare -A licenses=(
 	['ole32.lib']=''
 	['oleaut32.lib']=''
 	['opengl32.lib']=''
+	['psapi.lib']=''
 	['shell32.lib']=''
 	['user32.lib']=''
 	['uuid.lib']=''
 	['version.lib']=''
+	['winhttp.lib']=''
+	['wininet.lib']=''
 	['winmm.lib']=''
 	['winspool.lib']=''
+	['ws2_32.lib']=''
 	
 )
 
