--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -40,6 +40,7 @@ cmake_options+=(
 	-DAPPDIR='.'
 	-DICONDIR='.'
 	-DINSTALL_DATADIR='data'
+	-DINSTALL_BLENDER_PLUGINDIR="plugins/blender/arx_addon"
 	-DWITH_SDL=2
 	-DRUNTIME_LIBEXECDIR=".${env_separator}.."
 	-DRUNTIME_DATADIR=".${env_separator}../.."
