Support creating RPM/DEB packages for snapshots

--- a/scripts/config
+++ b/scripts/config
@@ -444,8 +444,14 @@ system_packages=(
 # OpenSUSE Build Service project to push RPM and DEB packages to
 #obs_project='home:foobar'
 
-# Launchpad project to push RPM and DEB packages to
+# OpenSUSE Build Service project to push RPM and DEB snapshot packages to
+#obs_snapshot_project='home:foobar:snapshots'
+
+# Launchpad project to push DEB packages to
 #launchpad_ppa='ppa:foobar/release'
+
+# Launchpad project to push DEB development snapshot packages to
+#launchpad_snapshot_ppa='ppa:foobar/snapshot'
 
 # GPG key to use for Launchpad uploads
 #launchpad_key=''
