arx-libertatis: Don't set data subdir in arx-portable
AL can find this on its own, and the main dir was already searched from
the config dir.
This makes the search paths consistent with the RUNTIME_DATADIR.

--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -56,7 +56,7 @@ wrapper_use_command=1
 wrapper_use_cmd_path=1
 
 launchers=(
-	[arx-portable]='"arx" --no-data-dir --data-dir="$here/data" --user-dir="$here" --config-dir="$here"'
+	[arx-portable]='"arx" --no-data-dir --data-dir="$here" --user-dir="$here" --config-dir="$here"'
 )
 
 ################################################################################
