--- a/scripts/config
+++ b/scripts/config
@@ -100,6 +100,8 @@ flat_files_tree=0
 ################################################################################
 # Build configuration
 
+prepare_source() { echo "no custom prepare steps" ; }
+
 # Additional options to pass to CMake
 declare -a cmake_options
 
