arx-libertatis: Update libArxIO DEB package name

--- a/arx-libertatis/deb/control
+++ b/arx-libertatis/deb/control
@@ -50,7 +50,7 @@ Description: Tool to extract the Arx Fatalis .pak files containing the game asse
  .
  This is not required to run Arx Libertatis but can be useful for development.
 
-Package: libarxio
+Package: libarxio0
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -60,14 +60,14 @@ Description: Arx compression helper library
 Package: libarxio-dev
 Section: devel
 Architecture: any
-Depends: ${misc:Depends}, libarxio (= ${binary:Version})
+Depends: ${misc:Depends}, libarxio0 (= ${binary:Version})
 Description: Arx compression helper library (development files)
  Arx Fatalis compression helper library used by the Blender addon (development files).
 
 Package: arx-blender-addon
 Section: utils
 Architecture: all
-Depends: ${misc:Depends}, libarxio (= ${binary:Version})
+Depends: ${misc:Depends}, libarxio0 (= ${binary:Version})
 Description: Arx Libertatis Blender addon
  Blender addon to edit Arx Fatalis data files.
 
