Add a config variable for release candidates

--- a/scripts/config
+++ b/scripts/config
@@ -26,6 +26,13 @@ if [ -z "${is_test_version:-}" ] ; then
 	fi
 fi
 
+if [ -z "${is_release_candidate:-}" ] ; then
+	is_release_candidate=0
+	if [ $is_snapshot = 1 ] && [ ! -z "${version:-}" ] ; then
+		[[ "${version}" =~ ^.*\.[0-9]+rc[0-9]+$ ]] && is_release_candidate=1
+	fi
+fi
+
 # Where are project-specific test/input files stored?
 filesdir="$projectdir/files"
 
