--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -78,7 +78,10 @@ cmake_options+=(
 )
 
 if [ $is_snapshot = 1 ] && [ $is_release_candidate = 0 ] ; then
-	cmake_options+=( -DDEBUG=1 )
+	cmake_options+=(
+		-DDEBUG=1
+		-DDEBUG_GL=0
+	)
 fi
 
 ################################################################################
