Add a new mechanism to disable builds for an Ubuntu version

--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -156,4 +156,4 @@ test_binaries() {
 
 echo "${version:-kek}" | grep -P '^\d+\.\d+$' > /dev/null && codename_required=1
 
-remove_from_array ubuntu_versions 'precise' # GLM is too old
+launchpad_builds['precise']='disabled' # GLM is too old
