Update Ubuntu releases

--- a/config
+++ b/config
@@ -150,4 +150,5 @@ ubuntu_versions+=(
 	'xenial'  # 16.04 LTS  EOL: 2021-04
 	'yakkety' # 16.10      EOL: 2017-02
 	'zesty'   # 17.04      EOL: 2018-01
+	'artful'  # 17.10
 )
