Increase snapshot git sha1 prefix to 7 characters

--- a/scripts/config
+++ b/scripts/config
@@ -104,6 +104,9 @@ codename_required=0
 # Don't create a subdirectory for each version
 flat_files_tree=0
 
+# Commit prefix length
+commit_prefix_length=7
+
 ################################################################################
 # Build configuration
 
