Create VERSION and COMMIT files for all builds

--- a/scripts/source/build
+++ b/scripts/source/build
@@ -59,9 +59,10 @@ if [ -f "$_version_file" ] ; then
 		[ ! -z "$_rest" ] && _vername="$_vername
 $_rest"
 		echo "$_vername" > "$_version_file"
-		if [ $flat_files_tree = 0 ] ; then
-			git --git-dir="$_repodir" rev-parse "$commit" > "${_out%/*}/COMMIT"
-		fi
+	fi
+	if [ $flat_files_tree = 0 ] ; then
+		git --git-dir="$_repodir" rev-parse "$commit" > "${_out%/*}/COMMIT"
+		cp "$_version_file" "${_out%/*}/VERSION"
 	fi
 fi
 
