--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -17,6 +17,9 @@ project_tagline='a cross-platform, open source port of [Arx Fatalis](http://www.
 # URL for alternate downloads (OPTIONAL)
 project_downloads_url='http://wiki.arx-libertatis.org/Download'
 
+# URL for alternate snapshot download (OPTIONAL)
+project_snapshot_downloads_url='http://wiki.arx-libertatis.org/Development_snapshots'
+
 # URL for the full changelog (OPTIONAL)
 project_changelog_url='http://wiki.arx-libertatis.org/Changelog'
 
