--- a/scripts/config
+++ b/scripts/config
@@ -90,6 +90,9 @@ project_name="$project"
 # URL for alternate downloads (OPTIONAL)
 #project_downloads_url='http://example.com/download'
 
+# URL for alternate snapshot download (OPTIONAL)
+#project_snapshot_downloads_url='http://example.com/download'
+
 # URL for the full changelog (OPTIONAL)
 #project_changelog_url='http://example.com/changelog'
 
