--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -79,6 +79,7 @@ cmake_options+=(
 	-DINSTALL_DATADIR='data'
 	-DINSTALL_BLENDER_PLUGINDIR="plugins/blender/arx_addon"
 	-DWITH_SDL=2
+	-DWITH_OPENGL=epoxy
 	-DRUNTIME_LIBEXECDIR=".${env_separator}.."
 	-DRUNTIME_DATADIR=".${env_separator}../.."
 )
@@ -150,6 +151,10 @@ forbidden_libraries+=(
 	'*Qt5Core*'
 	'*Qt5Gui*'
 	'*Qt5Widgets*'
+	
+	# Epoxy and SDL should load libGL dynamically
+	'libGL.so*'
+	'OpenGL32.dll'
 	
 )
 
