Update Ubuntu releases

--- a/config
+++ b/config
@@ -149,5 +149,6 @@ ubuntu_versions+=(
 	'xenial'  # 16.04 LTS  EOL: 2021-04
 	'artful'  # 17.10      EOL: 2018-07
 	'bionic'  # 18.04 LTS  EOL: 2023-04
-	'cosmic'  # 18.10
+	'cosmic'  # 18.10      EOL: 2019-07
+	'disco'   # 19.04
 )
