Recognize more system libraries

--- a/scripts/config
+++ b/scripts/config
@@ -279,6 +279,17 @@ system_libraries=(
 	'winmm.dll'
 	'winspool.dll'
 	'ws2_32.dll'
+	'api-ms-win-crt-convert-l1-1-0.dll'
+	'api-ms-win-crt-environment-l1-1-0.dll'
+	'api-ms-win-crt-filesystem-l1-1-0.dll'
+	'api-ms-win-crt-heap-l1-1-0.dll'
+	'api-ms-win-crt-locale-l1-1-0.dll'
+	'api-ms-win-crt-math-l1-1-0.dll'
+	'api-ms-win-crt-runtime-l1-1-0.dll'
+	'api-ms-win-crt-stdio-l1-1-0.dll'
+	'api-ms-win-crt-string-l1-1-0.dll'
+	'api-ms-win-crt-time-l1-1-0.dll'
+	'api-ms-win-crt-utility-l1-1-0.dll'
 	
 	# FreeBSD
 	'libthr.so*'
@@ -315,8 +326,12 @@ forbidden_libraries=(
 	'libpulse*.so*'
 	
 	# X11 - don't link directly, use dlopen
-	'libX11.so*'
+	'libX*.so*'
 	'libxcb.so*'
+	'libxkb*.so*'
+	
+	# Wayland - don't link directly, use dlopen
+	'libwayland*.so*'
 	
 	# Non-redistributable debug libraries
 	'msvcm*d.dll'
