--- a/config
+++ b/config
@@ -224,4 +224,5 @@ ubuntu_versions+=(
 	'bionic'  # 18.04 LTS  EOL: 2023-04
 	'cosmic'  # 18.10      EOL: 2019-07
 	'disco'   # 19.04
+	'eoan'    # 19.10
 )
