arx-libertatis: Use HTTPS links

--- a/arx-libertatis-data/config
+++ b/arx-libertatis-data/config
@@ -9,10 +9,10 @@ project_name='Arx Libertatis Data'
 git_repository='git://github.com/arx/ArxLibertatisData.git'
 
 # URL for the project website
-project_url='http://arx-libertatis.org/'
+project_url='https://arx-libertatis.org/'
 
 # URL where output files can be accessed
-project_files_url='http://arx-libertatis.org/files/data/'
+project_files_url='https://arx-libertatis.org/files/data/'
 
 # GPG key id to sign builds with - empty key disables signing
 sign_key='F87D7DF750859A5E' # release@arx-libertatis.org
