--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -177,6 +177,8 @@ test_binaries() {
 
 echo "${version:-kek}" | grep -P '^\d+\.\d+$' > /dev/null && codename_required=1
 
-launchpad_builds['precise']='disabled' # GLM is too old
+launchpad_builds['trusty']='binary' # libepoxy is too old
 
 obs_bin_rpm=1
+
+obs_bin_deb=1
