--- a/arx-libertatis/deb/control
+++ b/arx-libertatis/deb/control
@@ -2,7 +2,13 @@ Source: arx-libertatis
 Section: games
 Priority: extra
 Maintainer: Daniel Scharrer <daniel@constexpr.org>
-Build-Depends: debhelper (>= 7.0.50), cmake (>= 2.8), libboost-dev (>= 1.48), libglm-dev (>= 0.9.5.0), zlib1g-dev, libsdl2-dev (>= 2.0.0), libfreetype6-dev (>= 2.3.0), libopenal-dev, mesa-common-dev, libgl1-mesa-dev, libepoxy-dev (>= 1.2) | libglew-dev (>= 1.5.2), qtbase5-dev (>= 5.0.0) | libqt4-dev (>= 4.7.0), libcurl4-gnutls-dev (>= 7.20.0)
+<? if($bin && $series == 'stable'): ?>
+Build-Depends: debhelper (>= 7.0.50)
+<? elseif($bin): ?>
+Build-Depends: debhelper (>= 7.0.50), qtbase5-dev (>= 5.0.0), libcurl3 (>= 7.20.0)
+<? else: ?>
+Build-Depends: debhelper (>= 7.0.50), cmake (>= 2.8), libboost-dev (>= 1.48), libglm-dev (>= 0.9.5.0), zlib1g-dev, libsdl2-dev (>= 2.0.0), libfreetype6-dev (>= 2.3.0), libopenal-dev, libepoxy-dev (>= 1.2), qtbase5-dev (>= 5.0.0), libcurl4-gnutls-dev (>= 7.20.0)
+<? endif ?>
 Standards-Version: 3.9.4
 Homepage: https://arx-libertatis.org/
 Vcs-Git: git://github.com/arx/ArxLibertatis.git
@@ -11,13 +17,16 @@ Vcs-Browser: https://github.com/arx/ArxLibertatis
 Package: arx-libertatis
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+<? if(!$bin || $series != 'stable'): ?>
 Recommends: arxcrashreporter
+<? endif; ?>
 Conflicts: arxcrashreporter (< ${binary:Version}), arxcrashreporter (> ${binary:Version})
 Suggests: arx-fatalis-data | arx-fatalis-demo-data | game-data-packager (>= 41)
 Description: Cross-platform port of Arx Fatalis, a first-person role-playing game
  Arx Libertatis is a cross-platform port of the GPLed Arx Fatalis first-person
  role-playing game. This package only includes the game executable - you will
  also need the data files from the original game.
+<? if(!$bin || $series != 'stable'): ?>
 
 Package: arxcrashreporter
 Section: devel
@@ -26,6 +35,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, gdb
 Description: Arx Libertatis crash reporter
  A GUI tool to report detailed information to https://bugs.arx-libertatis.org/
  if Arx Libertatis crashes.
+<? endif; ?>
 
 Package: arxsavetool
 Section: utils
@@ -68,6 +78,7 @@ Depends: ${misc:Depends}, libarxio0 (>= ${binary:Version})
 Enhances: blender
 Description: Arx Libertatis Blender addon
  Blender addon to edit Arx Fatalis data files.
+<? if(!$bin): ?>
 
 Package: arx-libertatis-dbg
 Architecture: any
@@ -81,3 +92,4 @@ Description: debugging symbols for arx-libertatis
  the data files from the original game.
  .
  This package contains the debugging symbols for arx-libertatis.
+<? endif ?>
