--- a/scripts/config
+++ b/scripts/config
@@ -505,5 +505,8 @@ declare -A launchpad_builds
 # Whether or not to push binary RPM packages to OBS
 obs_bin_rpm=0
 
+# Whether or not to push binary DEB packages to OBS
+obs_bin_deb=0
+
 # Ubuntu versions for which to push build jobs to Launchpad
 declare -a ubuntu_versions
